crates/biome_yaml_formatter/tests/specs/prettier/yaml/prettier-ignore/middle-comment.yml.snap
---
source: crates/biome_formatter_test/src/snapshot_builder.rs
info: yaml/prettier-ignore/middle-comment.yml
---

# Input

```yml
abc:  !!str #   hello
   123
# prettier-ignore
def:  !!str #   hello
   456

```


# Errors
```
middle-comment.yml:2:4 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a block mapping entry but instead found '123
    # biome-ignore format: prettier ignore
    def:  !!str #   hello
       456'.
  
    1 │ abc:  !!str #   hello
  > 2 │    123
      │    ^^^
  > 3 │ # biome-ignore format: prettier ignore
  > 4 │ def:  !!str #   hello
  > 5 │    456
      │    ^^^
    6 │ 
  
  i Expected a block mapping entry here.
  
    1 │ abc:  !!str #   hello
  > 2 │    123
      │    ^^^
  > 3 │ # biome-ignore format: prettier ignore
  > 4 │ def:  !!str #   hello
  > 5 │    456
      │    ^^^
    6 │ 
  

```

# Error
```text
format: Can't format code because it contains syntax errors
```
